# nback

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml
nback_game/: __init__.py  nback.py
